ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contact/fields/customer_id__c.field-meta.xml
<CustomField>
    <fullName>customer_id__c</fullName>
    <externalId>true</externalId>
    <label>customer_id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>