ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contact/fields/customer_number__c.field-meta.xml
<CustomField>
    <fullName>customer_number__c</fullName>
    <label>customer_number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>