ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contact/fields/Enabled_as_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Enabled_as_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by b2b provision user flow</description>
    <label>Enabled as Commerce User</label>
    <type>Checkbox</type>
</CustomField>