ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contact/fields/login__c.field-meta.xml
<CustomField>
    <fullName>login__c</fullName>
    <externalId>true</externalId>
    <label>login</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>