ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contact/fields/Outlook_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Company_Name__c</fullName>
    <description>Temporary Filed for Loading Sales Contacts</description>
    <label>Outlook Company Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>