ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contact/listViews/Commerce_Contacts.listView-meta.xml
<ListView>
    <fullName>Commerce_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Commerce</value>
    </filters>
    <label>Commerce Contacts</label>
    <sharedTo>
        <role>Customer_Service</role>
        <roleAndSubordinatesInternal>User</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>