ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contact/listViews/Contact_Account_Correction.listView-meta.xml
<ListView>
    <fullName>Contact_Account_Correction</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Outlook_Company_Name__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Contact Account Correction</label>
</ListView>